<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearAccessPhone"
        >

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/chat_people"
                android:textColor="#FFF"
                android:textSize="20sp"


                />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:targetApi="o">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="50dp"
                />

            <Button
                android:id="@+id/btnLoginCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/continue_button"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:gravity="center"
                android:text="@string/login_code"
                android:textColor="#FFF" />


            <Button
                android:id="@+id/btnLoginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/continue_button"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:gravity="center"
                android:text="@string/login_pass"
                android:textColor="#FFF" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progcessBarAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:visibility="gone" />

</RelativeLayout>